--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,6 @@
     position: relative;
     width: 1100px;
     margin: 0 auto;
-    background: #456254;
 }
 
 /*header*/
@@ -19,7 +18,7 @@
 .public-header .header-log a {
     width: 182px;
     height: 54px;
-    background: url(../images/public-header-logo.png);
+    background: url(../images/public-header-logo.png) no-repeat;
 
 }
 .public-header .header-nav{
@@ -59,5 +58,5 @@
     height: 55px;
     margin-top: -10px;
     margin-bottom: 12px;
-    background: url(../images/footer-logo.png);
+    background: url(../images/footer-logo.png) no-repeat;
 }
